--- a/views/edit.jade
+++ b/views/edit.jade
@@ -10,7 +10,7 @@ block content
 				div(class="form-group")
 					label(class="col-sm-2 control-label" for="nProyecto") Titulo proyecto: 
 					div(class="col-sm-7")
-						input(class="form-control" type='text' name='nProyecto' id="nProyecto" value=cp.proyecto)
+						input(class="form-control" type='text' name='nProyecto' id="nProyecto" value=cp.proyecto maxlength="80" pattern="[a-zA-Z0-9 ]*" title="Sólo son permitidas letras y números" required)
 				div(class="form-group")
 					label(class="col-sm-2 control-label" for="idCasoPrueba") ID caso prueba:
 					div(class="col-sm-2")
@@ -18,65 +18,77 @@ block content
 				div(class="form-group")
 					label(class="col-sm-2 control-label" for="nombreCP") Título de caso prueba: 
 					div(class="col-sm-7")
-						input(class="form-control" type='text' name='nombreCP' id='nombreCP' value=cp.nombre maxlength="30")
+						input(class="form-control" type='text' name='nombreCP' id='nombreCP' value=cp.nombre maxlength="80" pattern="[a-zA-Z0-9 ]*" title="Sólo son permitidas letras y números" required)
 				div(class="form-group")
 					label(class="col-sm-2 control-label" for="descripcion") Descripción: 
 					div(class="col-sm-7")
-						textarea(class="form-control" name='descripcion' id='descripcion' form="plantilla" rows="4" wrap="hard")=cp.descripcion
+						textarea(class="form-control" name='descripcion' id='descripcion' form="plantilla" rows="4" wrap="hard" maxlength="300" pattern="[a-zA-Z0-9 ]*" title="Sólo son permitidas letras y números" required)=cp.descripcion
 				div(class="form-group")
 					label(class="col-sm-2 control-label" for="Precondiciones") Precondiciones: 
 					div(class="col-sm-7")
-						input(class="form-control" type='text' name='Precondiciones' id='Precondiciones' value=cp.precondicion)
+						input(class="form-control" type='text' name='Precondiciones' id='Precondiciones' value=cp.precondicion maxlength="100" pattern="[a-zA-Z0-9 ]*" title="Sólo son permitidas letras y números" required)
 				div(class="form-group")
 					label(class="col-sm-2 control-label" for="casosUso") Casos de uso: 
 					div(class="col-sm-7")
-						input(class="form-control" type='text' name='casosUso' id='casosUso' value=cp.casoDeUso)
+						input(class="form-control" type='text' name='casosUso' id='casosUso' value=cp.casoDeUso maxlength="150" pattern="[a-zA-Z0-9 ]*" title="Sólo son permitidas letras y números" required)
 				div(class="form-group")
 					label(class="col-sm-2 control-label" for="pasosEjecucion") Pasos de ejecucion: 
 					div(class="col-sm-7")
-						textarea(class="form-control" name='pasosEjecucion' id='pasosEjecucion' form="plantilla" rows="4" wrap="hard")=cp.pasosEjecucion
+						textarea(class="form-control" name='pasosEjecucion' id='pasosEjecucion' form="plantilla" rows="4" wrap="hard" maxlength="300" pattern="[a-zA-Z0-9 ]*" title="Sólo son permitidas letras y números" required)=cp.pasosEjecucion
 				div(class="form-group")
 					label(class="col-sm-2 control-label" for="rEsperados") Resultados Esperados: 
 					div(class="col-sm-7")
-						input(class="form-control" type='text' name='rEsperados' id='rEsperados' value=cp.resultadosEsperados)
+						input(class="form-control" type='text' name='rEsperados' id='rEsperados' value=cp.resultadosEsperados maxlength="150" pattern="[a-zA-Z0-9 ]*" title="Sólo son permitidas letras y números" required)
 				div(class="form-group")
 					label(class="col-sm-2 control-label" for="estados") Estado:
 					div(class="col-sm-2")
 						label
-							input(type='radio' name='estado' value="Exitoso")
+							if (cp.estado == "Exitoso")
+								input(type='radio' name='estado' value="Exitoso" checked)
+							else
+								input(type='radio' name='estado' value="Exitoso")
 							| Exitoso
 					div(class="col-sm-2")
 						label
-							input(type='radio' name='estado' value="Fallido")
+							if (cp.estado == "Fallido")
+								input(type='radio' name='estado' value="Fallido" checked)
+							else
+								input(type='radio' name='estado' value="Fallido")
 							| Fallido
 					div(class="col-sm-2")
 						label
-							input(type='radio' name='estado' value="Detenido")
+							if (cp.estado == "Detenido")
+								input(type='radio' name='estado' value="Detenido" checked)
+							else
+								input(type='radio' name='estado' value="Detenido")
 							| Detenido
 					div(class="col-sm-2")
 						label
-							input(type='radio' name='estado' value="Pendiente")
+							if (cp.estado == "Pendiente")
+								input(type='radio' name='estado' value="Pendiente" checked)
+							else
+								input(type='radio' name='estado' value="Pendiente")
 							| Pendiente
 				div(class="form-group")
 					label(class="col-sm-2 control-label" for="rObtenidos") Resultados Obtenidos: 
 					div(class="col-sm-7")
-						input(class="form-control" type='text' name='rObtenidos' id='rObtenidos' value=cp.resultadosObtenidos)
+						input(class="form-control" type='text' name='rObtenidos' id='rObtenidos' value=cp.resultadosObtenidos maxlength="150" pattern="[a-zA-Z0-9 ]*" title="Sólo son permitidas letras y números" required)
 				div(class="form-group")
 					label(class="col-sm-2 control-label" for="error") Errores: 
 					div(class="col-sm-7")
-						input(class="form-control" type='text' name='errores' id='errores' value=cp.errores)
+						input(class="form-control" type='text' name='errores' id='errores' value=cp.errores maxlength="100" pattern="[a-zA-Z0-9 ]*" title="Sólo son permitidas letras y números" required)
 				div(class="form-group")
 					label(class="col-sm-2 control-label" for="diseniador") Responsable de diseño: 
 					div(class="col-sm-7")
-						input(class="form-control" type='text' name='diseniador' id='diseniador' value=cp.responsableDisenio)
+						input(class="form-control" type='text' name='diseniador' id='diseniador' value=cp.responsableDisenio maxlength="80" pattern="[a-zA-Z0-9 ]*" title="Sólo son permitidas letras y números" required)
 				div(class="form-group")
 					label(class="col-sm-2 control-label" for="ejecutor") Responsable de ejecución: 
 					div(class="col-sm-7")
-						input(class="form-control" type='text' name='ejecutor' id='ejecutor' value=cp.responsableEjecucion)
+						input(class="form-control" type='text' name='ejecutor' id='ejecutor' value=cp.responsableEjecucion maxlength="80" pattern="[a-zA-Z0-9 ]*" title="Sólo son permitidas letras y números" required)
 				div(class="form-group")
 					label(class="col-sm-2 control-label" for="comentario") Comentarios: 
 					div(class="col-sm-7")
-						input(class="form-control" type='text' name='comentario' id='comentario' value=cp.comentarios)
+						input(class="form-control" type='text' name='comentario' id='comentario' value=cp.comentarios maxlength="150" pattern="[a-zA-Z0-9 ]*" title="Sólo son permitidas letras y números" required)
 					br
 				button(id="botones" class="btn btn-primary" type='submit') Actualizar 
 	include footer.jade
