Avance de proyecto
Validaciones
herramientas para pruebas automáticas
Documentación de pruebas

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -111,7 +111,7 @@ div.descarga
 	margin 20px 20px
 	padding 20px 0px
 	
-.itemCP #nombreCU
+.itemCP .nombreCU
 	margin 8px 0px 0px 20px
 	font-size 1.5em
 	position absolute
@@ -138,6 +138,6 @@ div.descarga
 	#formatoPrueba tr td #title
 		font-size 1em
 	
-	.itemCP #nombreCU
+	.itemCP .nombreCU
 		width 150px
 		
