--- a/views/index.jade
+++ b/views/index.jade
@@ -4,10 +4,12 @@ block content
 	include header.jade
 	div.container
 		strong#title Bienvenido
+		div(class=tipo)
+			span=mensaje
 		div.row
 		each cp in data
 			div.itemCP.col-md-4
-				a(href="details/"+cp.id id="nombreCU")=cp.nombre
+				a(href="details/"+cp.id class="nombreCU")=cp.nombre
 				a(href="deleted/"+cp.id class="glyphicon glyphicon-trash")
 				a(href="edit/"+cp.id class='glyphicon glyphicon-pencil')
 				p=cp.descripcion
