--- a/views/edit.jade
+++ b/views/edit.jade
@@ -10,7 +10,7 @@ block content
 				div(class="form-group")
 					label(class="col-sm-2 control-label" for="nProyecto") Titulo proyecto: 
 					div(class="col-sm-7")
-						input(class="form-control" type='text' name='nProyecto' id="nProyecto" value=cp.proyecto maxlength="80" pattern="[a-zA-Z0-9 ]*" title="Titulo inválido: sólo letras y/o números" required)
+						input(class="form-control" type='text' name='nProyecto' id="nProyecto" value=cp.proyecto maxlength="80" pattern="[a-zA-Z0-9áéíóú ]*" title="Titulo inválido: sólo letras y/o números" required)
 				div(class="form-group")
 					label(class="col-sm-2 control-label" for="idCasoPrueba") ID caso prueba:
 					div(class="col-sm-2")
@@ -18,27 +18,27 @@ block content
 				div(class="form-group")
 					label(class="col-sm-2 control-label" for="nombreCP") Título de caso prueba: 
 					div(class="col-sm-7")
-						input(class="form-control" type='text' name='nombreCP' id='nombreCP' value=cp.nombre maxlength="80" pattern="[a-zA-Z0-9 ]*" title="nombre caso de prueba inválido: sólo letras y/o números" required)
+						input(class="form-control" type='text' name='nombreCP' id='nombreCP' value=cp.nombre maxlength="80" pattern="[a-zA-Z0-9áéíóú ]*" title="nombre caso de prueba inválido: sólo letras y/o números" required)
 				div(class="form-group")
 					label(class="col-sm-2 control-label" for="descripcion") Descripción: 
 					div(class="col-sm-7")
-						textarea(class="form-control" name='descripcion' id='descripcion' form="plantilla" rows="4" wrap="hard" maxlength="300" pattern="[a-zA-Z0-9 ]*" title="descripción inválido: sólo letras y/o números" required)=cp.descripcion
+						textarea(class="form-control" name='descripcion' id='descripcion' form="plantilla" rows="4" wrap="hard" maxlength="300" pattern="[a-zA-Z0-9áéíóú ]*" title="descripción inválido: sólo letras y/o números" required)=cp.descripcion
 				div(class="form-group")
 					label(class="col-sm-2 control-label" for="Precondiciones") Precondiciones: 
 					div(class="col-sm-7")
-						input(class="form-control" type='text' name='Precondiciones' id='Precondiciones' value=cp.precondicion maxlength="100" pattern="[a-zA-Z0-9 ]*" title="precondiciones invalidas: sólo letras y/o números" required)
+						input(class="form-control" type='text' name='Precondiciones' id='Precondiciones' value=cp.precondicion maxlength="100" pattern="[a-zA-Z0-9áéíóú ]*" title="precondiciones invalidas: sólo letras y/o números" required)
 				div(class="form-group")
 					label(class="col-sm-2 control-label" for="casosUso") Casos de uso: 
 					div(class="col-sm-7")
-						input(class="form-control" type='text' name='casosUso' id='casosUso' value=cp.casoDeUso maxlength="150" pattern="[a-zA-Z0-9 ]*" title="Casos de uso inválidos: sólo letras y/o números" required)
+						input(class="form-control" type='text' name='casosUso' id='casosUso' value=cp.casoDeUso maxlength="150" pattern="[a-zA-Z0-9áéíóú ]*" title="Casos de uso inválidos: sólo letras y/o números" required)
 				div(class="form-group")
 					label(class="col-sm-2 control-label" for="pasosEjecucion") Pasos de ejecucion: 
 					div(class="col-sm-7")
-						textarea(class="form-control" name='pasosEjecucion' id='pasosEjecucion' form="plantilla" rows="4" wrap="hard" maxlength="300" pattern="[a-zA-Z0-9 ]*" title="pasos de ejecución inválidos: sólo letras y/o números" required)=cp.pasosEjecucion
+						textarea(class="form-control" name='pasosEjecucion' id='pasosEjecucion' form="plantilla" rows="4" wrap="hard" maxlength="300" pattern="[a-zA-Z0-9áéíóú ]*" title="pasos de ejecución inválidos: sólo letras y/o números" required)=cp.pasosEjecucion
 				div(class="form-group")
 					label(class="col-sm-2 control-label" for="rEsperados") Resultados Esperados: 
 					div(class="col-sm-7")
-						input(class="form-control" type='text' name='rEsperados' id='rEsperados' value=cp.resultadosEsperados maxlength="150" pattern="[a-zA-Z0-9 ]*" title="Resultados esperados inválidos: sólo letras y/o números" required)
+						input(class="form-control" type='text' name='rEsperados' id='rEsperados' value=cp.resultadosEsperados maxlength="150" pattern="[a-zA-Z0-9áéíóú ]*" title="Resultados esperados inválidos: sólo letras y/o números" required)
 				div(class="form-group")
 					label(class="col-sm-2 control-label" for="estados") Estado:
 					div(class="col-sm-2")
@@ -72,7 +72,7 @@ block content
 				div(class="form-group")
 					label(class="col-sm-2 control-label" for="rObtenidos") Resultados Obtenidos: 
 					div(class="col-sm-7")
-						input(class="form-control" type='text' name='rObtenidos' id='rObtenidos' value=cp.resultadosObtenidos maxlength="150" pattern="[a-zA-Z0-9 ]*" title="Resultados Obtenidos inválidos: sólo letras y/o números" required)
+						input(class="form-control" type='text' name='rObtenidos' id='rObtenidos' value=cp.resultadosObtenidos maxlength="150" pattern="[a-zA-Z0-9áéíóú ]*" title="Resultados Obtenidos inválidos: sólo letras y/o números" required)
 				div(class="form-group")
 					label(class="col-sm-2 control-label" for="error") Errores: 
 					div(class="col-sm-7")
@@ -80,15 +80,15 @@ block content
 				div(class="form-group")
 					label(class="col-sm-2 control-label" for="diseniador") Responsable de diseño: 
 					div(class="col-sm-7")
-						input(class="form-control" type='text' name='diseniador' id='diseniador' value=cp.responsableDisenio maxlength="80" pattern="[a-zA-Z0-9 ]*" title="responsable diseño inválido: sólo letras y/o números" required)
+						input(class="form-control" type='text' name='diseniador' id='diseniador' value=cp.responsableDisenio maxlength="80" pattern="[a-zA-Z0-9áéíóú ]*" title="responsable diseño inválido: sólo letras y/o números" required)
 				div(class="form-group")
 					label(class="col-sm-2 control-label" for="ejecutor") Responsable de ejecución: 
 					div(class="col-sm-7")
-						input(class="form-control" type='text' name='ejecutor' id='ejecutor' value=cp.responsableEjecucion maxlength="80" pattern="[a-zA-Z0-9 ]*" title="responsable ejecución inválido: sólo letras y/o números" required)
+						input(class="form-control" type='text' name='ejecutor' id='ejecutor' value=cp.responsableEjecucion maxlength="80" pattern="[a-zA-Z0-9áéíóú ]*" title="responsable ejecución inválido: sólo letras y/o números" required)
 				div(class="form-group")
 					label(class="col-sm-2 control-label" for="comentario") Comentarios: 
 					div(class="col-sm-7")
-						textarea(class="form-control" name='comentario' id='comentario' form="plantilla" rows="4" wrap="hard" maxlength="150" pattern="[a-zA-Z0-9 ]*" title="Comentarios inválidos: sólo letras y/o números")=cp.comentarios
+						textarea(class="form-control" name='comentario' id='comentario' form="plantilla" rows="4" wrap="hard" maxlength="150" pattern="[a-zA-Z0-9áéíóú ]*" title="Comentarios inválidos: sólo letras y/o números")=cp.comentarios
 					br
 				button(id="botones" class="btn btn-primary" type='submit') Actualizar 
 	include footer.jade
